tests/negative/undefined_variable.fs
-- @test neg-002: Undefined variable
-- @expect_error "undefined"

blend main() {
    display(xyz)
}
